--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ git:
   
 # Install dependencies
 install:
-  - pip install -r requirements.txt
-  - pip3 install -r requirements.txt
+  - pip install codecov
   
 # script to run tests. Script can have many commands, one per line.
 script: 
-  - python -m unittest discover -p "*_test.py"
-  - python3 -m unittest discover -p "*_test.py"
+  - coverage run fraction_test.py
+
+after_success:
+  - codecov
