--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   
 # script to run tests. Script can have many commands, one per line.
 script: 
+  - python -m unittest discover -p "*_test.py"
   - coverage run fraction_test.py
 
 after_success:
